crates/sith_python_parser/tests/snapshots/invalid_syntax@statements__with__empty_with_items.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/statements/with/empty_with_items.py
---
## AST

```
Module(
    ModModule {
        range: 0..105,
        body: [
            With(
                WithStmt {
                    range: 88..98,
                    is_async: false,
                    items: [],
                    body: [
                        Expr(
                            ExprStmt {
                                range: 95..98,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 95..98,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            Expr(
                ExprStmt {
                    range: 100..105,
                    value: BinOp(
                        BinOpExpr {
                            range: 100..105,
                            left: Name(
                                NameExpr {
                                    range: 100..101,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                NameExpr {
                                    range: 104..105,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | # The parser should recover from this syntax error.
3 | 
4 | with : ...
  |      ^ Syntax Error: Expected the start of an expression after `with` keyword
5 | 
6 | x + y
  |
